# sepsis-prediction-model

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Flask_App/: Dockerfile  requirements.txt
Flask_App/templates/: home.html  predict.html
analysis/: initial_report.md
data/: readme.md
notebooks/: Notebook_for_Predictive_Sepsis_Detection.ipynb
src/: app.py
