[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sepsis_detection_project"
version = "0.0.1"
description = "This repository contains the code and resources for a Predictive Sepsis Detection project. The project aims to develop a system for automated medical diagnosis using Electronic Health Records (EHR) to predict the onset of sepsis."
authors = [
  { name = "Ivan Ivani" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["sepsis_detection_project"]
force_sort_within_sections = true


